Apr 18, 2011 - chris
o HAM_SORT_DUPLICATES is now disabled if Transactions are enabled.
    In such cases hamsterdb will return HAM_INV_PARAMETER. 

Dec 29, 2010 - chris
o Approx. matching is now disabled if Transactions are enabled. 
    In such cases functions will return HAM_INV_PARAMETER. 
o Direct access (HAM_DIRECT_ACCESS) is now disabled if Transactions are 
    enabled. In such cases functions will return HAM_INV_PARAMETER. 
    In previous versions Direct Access was anyway not possible in combination
    with Transactions, because Transactions were not possible with In-Memory
    Databases.

Dec 27, 2010 - chris
o when using HAM_PARTIAL in combination with Transactions, HAM_INV_PARAMETER
    is now returned. In previous versions of hamsterdb, this combination was
    allowed. If you need this implemented then please tell me.

Dec 26, 2010 - chris
o when using HAM_PARTIAL and the record->size is <= 8 then error 
    HAM_INV_PARAMETER is returned. In previous versions, this combination
    returned false results. Reason is because hamsterdb uses a compressed,
    efficient storage for such records, and they do not support partial
    access.

Sep 15, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.6

Sep 12, 2010 - chris
o the unix daemon was ported to a Win32 Service (which can also run in
    foreground)

Sep 07, 2010 - chris
o the tutorial is no longer part of the Doxygen files; instead it's now 
    online in a wiki: http://wiki.github.com/cruppstahl/hamsterdb
o several functions are now deprecated:
    use ham_open_ex instead of ham_open
    use ham_create_ex instead of ham_create
    use ham_env_open_ex instead of ham_env_open
    use ham_env_create_ex instead of ham_env_create

Aug 31, 2010 - chris
o fixed compilation on newest ArchLinux (gcc 4.5.1) - thanks, zebul666

Aug 28, 2010 - chris
o created MSVC projects for the server and the new samples; all MSVC