@@ -1,3 +1,7 @@
+Jun 02, 2011 - chris
+o the ./configure switch --enable-internal is now obsolte and enabled by
+	default
+
 Apr 18, 2011 - chris
 o HAM_SORT_DUPLICATES is now disabled if Transactions are enabled.
     In such cases hamsterdb will return HAM_INV_PARAMETER. 
